[package]
name = "st_client"
version = "0.1.0"
authors = ["Mark Hildreth <mark.k.hildreth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
st_device = { path = "../st_device" }
st_data = { path = "../st_data" }
