[package]
name = "st_core"
version = "0.1.0"
authors = ["Mark Hildreth <mark.k.hildreth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.5.3"
rand = { version = "0.7.3", default-features = false, features = ["small_rng"] }

[dev-dependencies]
rand = "0.7.3"
