[package]
name = "st_device"
version = "0.1.0"
authors = ["Mark Hildreth <mark.k.hildreth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feather_m0 = { version = "0.6.0", features = ["unproven"] }
panic-halt = "0.2.0"
atsamd-hal = "0.8.2"
embedded-hal = "0.2.3"
cortex-m-rt = "0.6.12"
cortex-m = "0.6.2"
st_data = { path = "../st_data" }
