[package]
name = "st_panels"
version = "0.1.0"
authors = ["Mark Hildreth <mark.k.hildreth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feather_m0 = { version = "0.6.0", features = ["unproven"] }
st_data = { path = "../st_data" }
embedded-hal = "0.2.3"
