[package]
name = "st_server"
version = "0.1.0"
authors = ["Mark Hildreth <mark.k.hildreth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.3", default-features = false, features = ["small_rng"] }
heapless = "0.5.3"
st_common = { path = "../st_common" }

[dev-dependencies]
# While testing on native computer, we will use more features
rand = "0.7.3"
